--- a/Python_Libraries.ipynb
+++ b/Python_Libraries.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "865fa4ed",
    "metadata": {
     "deletable": false,
@@ -114,12 +114,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-15\n",
+      "08:17:33\n"
+     ]
+    }
+   ],
    "source": [
-    "# Importing modules at the beginning of the program is a good practice\n",
+    "import datetime\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "date_today = datetime.date.today()\n",
+    "print(date_today)\n",
+    "\n",
+    "time_today = datetime.datetime.now()\n",
+    "print(time_today.strftime(\"%H:%M:%S\"))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c7edc1db",
    "metadata": {
     "deletable": false,
@@ -164,11 +178,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-15\n"
+     ]
+    }
+   ],
    "source": [
+    "from datetime import date\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "date_today = date.today()\n",
+    "print(date_today)"
    ]
   },
   {
@@ -199,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "acdeb327",
    "metadata": {
     "deletable": false,
@@ -215,11 +238,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-15\n",
+      "08:23:51\n"
+     ]
+    }
+   ],
    "source": [
+    "import datetime as dt\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "date_today = dt.date.today()\n",
+    "print(date_today)\n",
+    "\n",
+    "time_today = dt.datetime.now()\n",
+    "print(time_today.strftime(\"%H:%M:%S\"))"
    ]
   },
   {
@@ -269,7 +305,16 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "csv is known as (Comma seperated values) and is used to import and export format for different spreadsheets and databases\n",
+    "datetime is a format that is able to munipulate date and time\n",
+    "math is the format used when not using complex numbers. When using complex numbers it would be cmath.\n",
+    "os is that if the fucntion is available then you can retreive it though os. Example: os.stat(path) with give you information about the path.\n",
+    "re can specify specific sets opf strings that will match it. Will the strings match a particular expression.\n",
+    "string is a format used for sequence operations. \n",
+    "Unittest is a framwork that is used in other coding languages.\n",
+    "\n",
+    "Source:\n",
+    "https://docs.python.org/3/library/\n"
    ]
   },
   {
@@ -292,7 +337,7 @@
    "source": [
     "Answer in the cell below.\n",
     "\n",
-    "What is PyPI?"
+    "PyPi is the Python Packaging Index."
    ]
   },
   {
@@ -319,7 +364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +378,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "af7b0cce07376c58e2b36d64612d3cbee2d17660412879c7b0bfdcd47aa3d96c"
+   }
   }
  },
  "nbformat": 4,
